Added alot... dark mode toggle, fixed the hero img by using background-image in css and added alot more like the second page About and styling just need to add more content to first and second and... alot help me pls... anyways i need alot more AI img's so I habe no choice but to wait till tmrw

--- a/Test2/Test2.html
+++ b/Test2/Test2.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Black Box</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet"> <!-- Nice orbitron font for a more techy and mysterious feeling --> 
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="Test2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="hero">
-        <div class="hero-content">
-            <h1><span class="small-word">The</span><br> Black <br><span class="big-word">Box</span></h1>
-            <a href="#" class="cta-button">Get Started</a>
+        <img src="" alt="">
+        <div class="Hero-content">
+        <h1><span class="small-word">The</span><br> Black <br><span class="big-word">Box</span></h1>
+        <a href="H2.html" class="cta-button">Get Started</a>
         </div>
     </header>
 
     <nav>
         <ul>
             <li><a href="#">Home</a></li> 
-            <li><a href="about.html">About</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
-            <li><button id="darkModeToggle">🌙</button></li>
         </ul>
     </nav>
 
