Graphic Profile(About 80% done)

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li> 
+            <li><a href="index.html">Home</a></li> 
             <li><a href="about.html">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="graphic-profile.html">Graphic profile</a></li>
             <li><button id="darkModeToggle">🌙</button></li>
         </ul>
     </nav>
@@ -48,6 +49,7 @@
     </div>
 
     <footer>
+
         <p>© 2025 The Black Box | All rights reserved. | This is A School Project</p>
     </footer>
 </body>
