--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="graphic-profile.html">Graphic profile</a></li>
             <li><button id="darkModeToggle">🌙</button></li>
         </ul>
     </nav>
