Fixed / finnished the about page... might add some more stiles and effects to the team cards.

--- a/about.html
+++ b/about.html
@@ -31,27 +31,45 @@
         <p class="fade-in">We exist where others fear to tread.</p>
         <p class="fade-in">We operate in the spaces between truth and deception.</p>
     </section>    
+    <section class="about-mission">
+        <h2>Our Mission</h2>
+        <p class="fade-in">Our mission is to provide specialized services to uncover hidden truths.</p>
+        <p class="fade-in">Analyze complex data, and ensure our clients' safety & satisfaction.</p>
+    </section>
+    <section class="about-values">
+        <h2>Our Core Values</h2>
+        <ul>
+            <li class="fade-in">Secrecy - We operate in the shadows to protect our clients.</li>
+            <li class="fade-in">Precision - Every action we take is calculated and deliberate.</li>
+            <li class="fade-in">Exclusivity - Our services are not for everyone, only for those who truly needs them.</li>
+            <li class="fade-in">Adaptivity - We evolve with every challenge, no matter how complex.</li>
+        </ul>
+    </section>
+    <section class="about-quote">
+        <blockquote class="fade-in">We are the hand that shapes the world,<br> we are The Black Box.</blockquote>
+    </section>
+
     <section class="about-team">
         <h2>Our Specialists</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="anonymous1.png" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Profile-Pic-Shadow.webp" alt="Anonymous Specialist"> <!-- Placeholder image -->
                 <p>Codename: Shadow</p>
             </div>
             <div class="team-member">
-                <img src="anonymous2.png" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Ghost-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
                 <p>Codename: Ghost</p>
             </div>
             <div class="team-member">
-                <img src="anonymous3.png" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Specter-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
                 <p>Codename: Specter</p>
             </div>
             <div class="team-member">
-                <img src="anonymous4.png" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Phantom-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
                 <p>Codename: Phantom</p>
             </div>
             <div class="team-member">
-                <img src="anonymous5.png" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Reaper-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
                 <p>Codename: Reaper</p> <!-- Placeholder name -->
             </div>
         </div>
