Fixed hover on member/specialists. Small light-mode fixes. Added services.html + css + js code for accordions.

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
+    <script defer src="ServiceScrollscript.js"></script>
 </head>
 <body>
     <nav>
@@ -53,23 +54,24 @@
         <h2>Our Specialists</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="img/Profile-Pic-Shadow.webp" alt="Anonymous Specialist"> <!-- Placeholder image -->
-                <p>Codename: Shadow</p>
+                <img src="img/Profile-Pic-Shadow.webp" alt="Anonymous Specialist - Shadow"> <!-- Placeholder image -->
+                <p class="codename">Codename: Shadow</p>
+                <p><span class="description">A master of stealth and deception. Operates in the shadows, unseen and unheard.</span></p>
             </div>
             <div class="team-member">
-                <img src="img/Ghost-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Ghost-pfp.jpeg" alt="Anonymous Specialist - Ghost"> <!-- Placeholder image -->
                 <p>Codename: Ghost</p>
             </div>
             <div class="team-member">
-                <img src="img/Specter-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Specter-pfp.jpeg" alt="Anonymous Specialist - Specter"> <!-- Placeholder image -->
                 <p>Codename: Specter</p>
             </div>
             <div class="team-member">
-                <img src="img/Phantom-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Phantom-pfp.jpeg" alt="Anonymous Specialist - Phantom"> <!-- Placeholder image -->
                 <p>Codename: Phantom</p>
             </div>
             <div class="team-member">
-                <img src="img/Reaper-pfp.jpeg" alt="Anonymous Specialist"> <!-- Placeholder image -->
+                <img src="img/Reaper-pfp.jpeg" alt="Anonymous Specialist - Reaper"> <!-- Placeholder image -->
                 <p>Codename: Reaper</p> <!-- Placeholder name -->
             </div>
         </div>
