--- a/graphic-profile.html
+++ b/graphic-profile.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">Home</a></li> 
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="graphic-profile.html">Graphic profile</a></li>
             <li><button id="darkModeToggle">🌙</button></li>
