Validator.nu warned me about no header in my qoute section inside about.html. So i added one made it invisible on the screen so that it wouldn't be in the way

--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
         </ul>
     </section>
     <section class="about-quote">
+        <h2 class="visually-hidden">Inspirational Quote</h2>
         <blockquote class="fade-in">We are the hand that shapes the world,<br> we are The Black Box.</blockquote>
     </section>
 
